added stagerUserEmail as part of job data
